tests/fixtures/invalid/round_bytes_bool.py
# Cannot call round() with Bytes, Bool
x = round(b"hello", True)
